finished with notes up through do.

--- a/nov04/Nov-04Class.tex
+++ b/nov04/Nov-04Class.tex
@@ -118,12 +118,10 @@ and the whole term becomes
 = \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\Sigma_{tl,g}(\vec{r})\phi_{l,g}^{m}(\vec{r})
 \]
 
-
 \item Fission remains pretty easy since it already only requires the scalar flux. 
 \[
 \nu\Sigma_{fg'} = \dfrac{\int_{E_g'}^{E_{g'-1}} dE'\: \nu(E') \Sigma_f(E')\phi(\vec{r}, E')}{\phi_{g'}(\vec{r})}
 \]
-
 \end{itemize}
 
 We can combine all of this, and we add another $\Sigma_g \psi_g$ to both sides:
@@ -138,13 +136,67 @@ If we just weight it with the scalar flux ($P_0$ version), we get
 \[
 \Sigma_{tg}(\vec{r}) = \Sigma_{tg,0}(\vec{r}) = \dfrac{\int_{E_g}^{E_{g-1}} dE\:\Sigma_{t}(\vec{r}, E) \phi(\vec{r}, E)}{\phi_g(\vec{r})}
 \]
-This is called the consistent $P_N$ approximation. 
+This is called the ``consistent $P_N$ approximation". 
 
-The ``extended transport approximation" is a more elegant technique. \\
-For scattering, we usually trucnate the expansion at some $l=L$. \\
-We can choose $\Sigma_{tg}(\vec{r})$ to make the $l=L+1$th component to be small. That is
+A more elegant technique uses the observation that for scattering, we usually truncate the expansion at some $l=L$. \\
+We can then choose $\Sigma_{tg}(\vec{r})$ to make the $l=L+1$th component to be small. That is
 \[
 \sum_{m=-(L+1)}^{L+1} Y^*_{(L+1)m}(\vOmega)\sum_{g'=1}^G \bigl[\Sigma_{s(L+1),gg'} + \bigl(\Sigma_{tg}(\vec{r}) - \Sigma_{t(L+1),g}(\vec{r}) \bigr) \delta_{gg'}  \bigr]\phi_{(L+1),g'}^{m}(\vec{r}) \approx 0\:.
 \]
+For reactors, it is usually the case that scattering into a given group is equal to scattering out of it for most energy groups (which ones wouldn't this be true for?).\\
+We can then say
+\begin{align*}
+\sum_{g'=1}^G \Sigma_{s(L+1),gg'}\phi_{(L+1),g'}^{m}(\vec{r}) &\approx \sum_{g'=1}^G \Sigma_{s(L+1),g'g}\phi_{(L+1),g'}^{m}(\vec{r})\\
+\Sigma_{tg}(\vec{r}) &= \Sigma_{t(L+1),g}(\vec{r}) - \sum_{g'=1}^G \Sigma_{s(L+1),g'g}
+\end{align*}
+%
+This definition is called the ``extended transport approximation".
+
+\vspace*{1 em}
+----------------------------------------------\\
+\textbf{Discretization of Angle}\\
+We briefly mentioned the \textbf{discrete ordinates} ($S_N$) method in mid-September, and we are going to go back over it in the context of the transport equation.\\
+We'll look at the 1-D, slab version of the TE within each group (that is, we have one separate transport equation for each energy group--this is called a within group equation).
+\[
+\mu \frac{\partial \psi}{\partial x} + \Sigma_t(x)\psi(x,\mu) = \sum_{l=0}^L (2l+1) \Sigma_{s,l}(x) P_l(\mu)\phi_l(x) + S(x,\mu)
+\]
+The idea of discrete ordinates approximation is that the TE is only valid along a selected set of angles $\mu_n$, and we apply a compatible quadrature approximation to the integral term.
+\begin{align*}
+\mu_n \frac{\partial \psi_n}{\partial x} &+ \Sigma_t(x)\psi_n(x,\mu_n) = \sum_{l=0}^L (2l+1) \Sigma_{s,l}(x) P_l(\mu_n)\phi_l(x) + S(x,\mu_n)\\
+\psi_n(x) &= \psi(x,\mu_n)\\
+\phi(x) &=  \frac{1}{2}\sum_{n=1}^N w_n \psi_n(x)\\
+\phi_l(x) &= \frac{1}{2}\sum_{n=1}^N w_n P_l(\mu_n)\psi_n(x)\\
+w_n > 0& \quad \sum_n w_n = 2
+\end{align*}
+The collection of $\mu_n, w_n$ is known as the angular quadrature set. \\
+We frequently select $N$ is even and $\mu_n$ are symmetric about $\mu=0$.
+%
+\begin{align*}
+\mu_{N+1-n} &= -\mu_n\:, \quad n = 1, 2, \dots, \frac{N}{2} \quad \mu_n > 0\\
+w_n &= w_{N+1-n}
+\end{align*}
+%
+If $N$ weren't even we would get $\mu_{(N+1)/2} = 0$, which makes the derivative term disappear. It can also make our BCs ambiguous.\\
+With these conditions we get advantages in the boundary conditions as well.
+%
+\begin{align*}
+\text{reflecting at } x=0 \quad &\psi_n(0) = \psi_{N+1-n}(0)\:, \quad n = 1, 2, \dots, \frac{N}{2}\\
+\text{vacuum on right at } x=a \quad &\psi_n(a) = 0\:, \quad n = \frac{N}{2}+1, \frac{N}{2}+2, \dots, N
+\end{align*}
+%
+We have a fair bit of freedom selecting an ordinate set. \\
+In slab, Legendre $P_N$ and Double Legendre $DP_N$ are the most popular (the most well known in 3D is the level symmetric). \\
+We started the idea of $P_N$ in our derivation of the diffusion equation. For an expanded investigation of this and $DP_N$ see Appendix D of L\&M. \\
+Another method of interest is Simplified $P_N$, $SP_N$. We won't cover this, but I'll post a resource about it on our website for anyone who is curious.
+
+This DO formulation
+\begin{itemize}
+\item gives us $N$ ODEs and $N$ BCs
+\item treats the BCs exactly as long as the direction is in the quadrature set
+\item the scattering term is an approximation. You have to interpolate if you need $\psi$ along a non-included angle.
+\end{itemize}
+ 
+
+
 
 \end{document}
