--- a/nov09/Nov-09Class.tex
+++ b/nov09/Nov-09Class.tex
@@ -98,7 +98,7 @@ with $\tilde{S}_g(x,\mu)$ being the external and/or fission source for the group
 (I think I forgot to explicitly mention this last time; was also true for the within group in $S_N$).\\
 As long as the series is infinite, we are not introducing any approximations.
 
-We can use the Legendre expansion to make our TE an infinite set of coupled ODEs. We use the flux expansion in the equation, multiply by $\frac{1}{2}P_{l'}(\mu)$ and integrate over $-1 \leq \mu 1$:
+We can use the Legendre expansion to make our TE an infinite set of coupled ODEs. We use the flux expansion in the equation, multiply by $\frac{1}{2}P_{l'}(\mu)$ and integrate over $-1 \leq \mu \leq 1$:
 \begin{align*}
 \sum_{l=0}^{\infty} &(2l+1)\biggl[ \frac{1}{2} \int_{-1}^1 d\mu\: \mu P_{l'}(\mu) P_l(\mu) \frac{d}{d x}\phi_l(x) + \frac{1}{2} \int_{-1}^1 d\mu\: P_{l'}(\mu) P_l(\mu) \Sigma_t(x)\phi_l(x) \biggr] \\
 &= \sum_{l=0}^{\infty} (2l+1)\frac{\Sigma_{sl}}{2}\int_{-1}^1 d\mu\: P_{l'}(\mu) P_l(\mu) \phi_l(x) + s_{l'}(x)
@@ -118,7 +118,7 @@ However, the streaming term requires more work. We will use the Legendre recursi
 \]
 to get rid of $\mu$. This all gives, for $l' = 0, 1, \dots$
 \[
-\bigl(\frac{l'+1}{2l'+1}\bigr)P_{l'+1}(\mu)\frac{d}{d x}\phi_{l'+1}(x) + \bigl(\frac{l'}{2l'+1}\bigr)P_{l'-1}(\mu)\frac{d}{d x}\phi_{l'-1}(x) + \Sigma_t(x) \phi_{l'} = \Sigma_{sl'}(x)\phi_{l'}(x) + s_{l'}(x)\:.
+\bigl(\frac{l'+1}{2l'+1}\bigr)\frac{d}{d x}\phi_{l'+1}(x) + \bigl(\frac{l'}{2l'+1}\bigr)\frac{d}{d x}\phi_{l'-1}(x) + \Sigma_t(x) \phi_{l'} = \Sigma_{sl'}(x)\phi_{l'}(x) + s_{l'}(x)\:.
 \]
 what do we do when $l'=0$ for $\phi_{-1}$? We typically just set it to $0$, which doesn't matter anyway since we don't technically use that moment, giving
 \[
@@ -139,7 +139,7 @@ If we have an isotropic source, $s_1=0$. Use this in the $l=1$ equation to see
 \[
 \phi_1(x) = \frac{-1}{3(\Sigma_t - \Sigma_{s1})}\frac{d \phi_0}{dx}
 \]
-where $phi_1$ is also known as the net current - so we've got Fick's Law.\\
+where $\phi_1$ is also known as the net current - so we've got Fick's Law.\\
 The $l=0$ equation is then
 \[
 \frac{-1}{3(\Sigma_t - \Sigma_{s1})}\frac{d^2 \phi_0}{dx^2} + \Sigma_a \phi_0(x) = s_0(x)\:.
@@ -147,7 +147,7 @@ The $l=0$ equation is then
 
 In practice, we only ever select $N$ to be odd. This allows us to use $(N+1)/2$ conditions for each of the left and right boundaries. \\
 This is much easier than having odd boundary conditions would end up introducing artificial asymmetry. \\
-Using $N$ = even doesn't provide more information either. Look at $N=2$ (recall $phi_3 = 0$:
+Using $N$ = even doesn't provide more information either. Look at $N=2$ (recall $\phi_3 = 0$):
 \begin{align*}
 \frac{2}{5}&\frac{d}{dx}\phi_1(x) +(\Sigma_t - \Sigma_{s2})\phi_2(x) = s_2(x)\\
 &\\
